--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
         <!-- Header - set the background image for the header in the line below-->
         <header class="py-5 bg-image-full" style="background-image: url('https://source.unsplash.com/wfh8dDlNFOk/1600x900')">
             <div class="text-center my-5">
-                <img class="img-fluid rounded-circle mb-4" src="C:\Users\efplo\OneDrive\Pictures\ethan pics\GRP-0293.jpg" alt="..." width="200px" height="200px" />
+                <img class="img-fluid rounded-circle mb-4" src="C:\Users\efplo\OneDrive\Desktop\Final\GRP-0293 - Copy - Copy.jpg" alt="..." width="200px" height="200px" />
                 <h1 class="text-white fs-3 fw-bolder">Ethan Plothow</h1>
                 <p class="text-white-50 mb-0">Brigham Young University <br>Class of 2026</p>
             </div>
